# nebius-build-sf-2026

./: CLAUDE.md  PLAN_PERSON_A.md  PROJECT_PLAN.md  README.md  SKILLS.md  SPECS.md
armpilot/: .env  pytest.ini
armpilot/backend/: .env  config.py  main.py  pyproject.toml  test_smolvla_client.py
armpilot/backend/agents/: executor.py  perception.py  planner.py  reasoning.py  smolvla_client.py
armpilot/backend/models/: action.py  events.py  scene.py
armpilot/backend/tools/: tavily_search.py  toloka_homer.py  toloka_security.py  vision.py
armpilot/scripts/: calibrate_arm.py  dummy_smolvla_server.py  replay_with_viz.py  run_partial_test.sh  test_nebius.py  test_tavily.py  test_with_robot.py
armpilot/scripts/scripts/: record_motion.py
armpilot/tests/: conftest.py  test_api.py  test_executor.py  test_main_pipeline.py  test_models.py  test_planner.py  test_planner_track2.py  test_smolvla_client.py  test_smolvla_integration.py  test_smolvla_loop.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/layout/: DashboardLayout.jsx  Header.jsx  Sidebar.jsx
frontend/src/components/panels/: ApprovalGate.jsx  ArmSimulation.jsx  ArmStatus.jsx  CameraFeed.jsx  ReasoningTrace.jsx  SceneViewer.jsx  TavilyResults.jsx  TolokaPanel.jsx
frontend/src/hooks/: useVoice.js  useWebSocket.js
frontend/src/stores/: appStore.js
frontend/src/styles/: globals.css
nebius_server/: deploy.sh  requirements.txt  smolvla_server.py  test_smolvla_server.py
scripts/: demo_scenarios.py
(+6 files in other folders)
